--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -7,6 +7,12 @@ body {
 	font-size: 1vw;
     width: 100%;
 	}
+	
+div[type="page"] {
+    position: relative;
+    padding-bottom: 4em; 
+    margin-bottom: 4em;
+}
 
 h1, h2, h3, nav, footer {
     text-align: center;
@@ -29,6 +35,11 @@ h3 {
     
 }
 
+h5 {
+    font-size: 1vw;
+    font-weight: bold;
+}
+
 #details {
     padding: 2vw;
     margin: 1vw;
@@ -41,15 +52,19 @@ footer {
     margin-top: 1vw;
 }
 
-p {
-    margin: 0; 
-    padding: 0; 
-}
 
 span {
     display: block;     
     margin: 0;           
     padding: 0;         
+}
+
+ul {
+  list-style: none;
+}
+
+hr {
+    border-top: 1px solid black;
 }
 
 .copyright {
@@ -95,9 +110,9 @@ span {
     padding: 0;
 }
 
-.margin {
-    margin-top: 1em;
-    margin-bottom: 1em;
+.no-margin {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .bottom {
@@ -108,6 +123,10 @@ span {
 
 .italic {
     font-style: italic;
+}
+
+.gothic {
+    font-family: 'MedievalSharp'
 }
 
 
@@ -129,6 +148,84 @@ span {
   text-align: center;
   transform: rotate(180deg);      
   white-space: nowrap;            
-  height: 100%;                   
 }
 
+.top-left {
+    position: absolute;
+    top: 0;
+    left: 10px;
+}
+
+.top-right {
+    position: absolute;
+    top: 0;
+    right: 10px;
+}
+
+.top-centre {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bottom-centre {
+    bottom: auto;
+}
+
+.right {
+    position: absolute;
+    right:0;
+}
+.left {
+    position: absolute;
+    left:0;
+}
+.signature-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 2em;
+  gap: 0.5em;
+}
+
+.signed {
+  padding: 0.2em;
+}
+
+.dotted-line {
+  border: none;
+  border-top: 1px dotted black;
+  margin: 0.5em 0;
+}
+
+.line {
+   border-top: 1px solid black;
+   margin-top: 2em; 
+   margin-bottom: 1em;
+}
+
+.metamark {
+    right:0;
+}
+
+.thumbnail {
+    margin: 5px;
+    border: 1px solid black;
+    width: 100px;
+}
+
+.img-full {
+    margin: 5px;
+    border: 1px solid black;
+    width: 500px;
+}
+
+.stamp {
+  text-align: center;  
+}
+
+.box-1 {
+    border-style: solid;
+    padding: 1em;
+}
