--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -68,18 +68,32 @@ footer {
     margin-top: 1vw;
 }
 
-ul {
-  list-style: none;
-
-}
 
 hr {
     border-top: 1px solid black;
 }
 
-li {
-  display: flex;
-}
+ul.leaders {
+    max-width: 40em;
+    padding: 0;
+    overflow-x: hidden;
+    list-style: none}
+ul.leaders li:before {
+    float: left;
+    width: 0;
+    white-space: nowrap;
+    content:
+ ". . . . . . . . . . . . . . . . . . . . "
+ ". . . . . . . . . . . . . . . . . . . . "
+ ". . . . . . . . . . . . . . . . . . . . "
+ ". . . . . . . . . . . . . . . . . . . . "}
+ul.leaders span:first-child {
+    padding-right: 0.33em;
+    background: white}
+ul.leaders span + span {
+    float: right;
+    padding-left: 0.33em;
+    background: white}
 
 .copyright {
     width: 50%;
@@ -374,17 +388,6 @@ li {
 .vertical-box p {
     transform: rotate(180deg); 
     transform-origin: center;
-}
-
-.dots {
-  flex-grow: 1;
-  border-bottom: 1px dotted black;        
-  margin: 0 0.5em;
-}
-
-.pagenumber {
-  white-space: nowrap;
-  float: right;
 }
 
 .zoom-container {
